--- a/LivroMente_FRONT/package.json
+++ b/LivroMente_FRONT/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "angular-font-awesome": "^3.1.2",
     "boxicons": "^2.1.4",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^17.0.3",
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "^17.0.2",
     "@types/jasmine": "~4.3.0",
