--- a/LivroMente_FRONT/package.json
+++ b/LivroMente_FRONT/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
+    "@fortawesome/angular-fontawesome": "^0.14.0",
     "angular-font-awesome": "^3.1.2",
     "boxicons": "^2.1.4",
     "font-awesome": "^4.7.0",
