--- a/LivroMente_FRONT/package.json
+++ b/LivroMente_FRONT/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^18.2.1",
     "@angular/platform-browser-dynamic": "^18.2.1",
     "@angular/router": "^18.2.1",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
