--- a/LivroMente_FRONT/package.json
+++ b/LivroMente_FRONT/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^18.2.1",
     "@angular/router": "^18.2.1",
     "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.2",
