--- a/LivroMente_FRONT/package.json
+++ b/LivroMente_FRONT/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "jwt-decode": "^4.0.0",
     "livro-mente-front": "file:",
+    "primeng": "^17.18.12",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
